apps/market-data/sin/execution-service-status-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: execution-service-status-server
  namespace: execution-service-status-server
spec:
  selector:
    matchLabels:
      app: execution-service-status-server
  replicas: 1
  template:
    metadata:
      labels:
        app: execution-service-status-server
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: execution-service-status-server
        image: 346086605621.dkr.ecr.ap-southeast-1.amazonaws.com/alc-execution-service-status-server:2023.7.26.22-ad22e55
        resources:
          limits:
            memory: 4000Mi
            cpu: 4000m
          requests:
            cpu: 1500m
            memory: 1000Mi
        volumeMounts:
          - name: secrets-volume
            mountPath: /etc/secrets
            readOnly: true
        ports:
        - name: http-port
          containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: http-port
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 6
      imagePullSecrets:
      - name: ghcr-creds
      volumes:
        - name: secrets-volume
          secret:
            secretName: execution-service-status-server
            optional: false
      tolerations:
      - key: node/destiny
        operator: Equal
        value: dg-nrt
        effect: NoSchedule
      nodeSelector:
        node/destiny: dg-nrt
