apps/market-data/sin/execution-service-status-server/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-server-api
  namespace: execution-service-status-server
  labels:
    app: execution-service-status-server
spec:
  type: ClusterIP
  selector:
    app: execution-service-status-server
  ports:
    - name: in
      protocol: TCP
      port: 5000
      targetPort: 5000
