apps/market-data/sin/execution-service-status-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:346086605621:certificate/4c467c90-299b-439a-9d3b-541b6ef9896c
    alb.ingress.kubernetes.io/group.name: eks-prod-sin-alb-ingress-public
    # alb.ingress.kubernetes.io/inbound-cidrs: 54.229.241.182/32,35.72.30.130/32,18.141.232.196/32,151.192.55.36/32,49.128.61.206/32
    alb.ingress.kubernetes.io/security-groups: alb-eks-prod, alb-backend-eks-prod
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=180
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200,301'
    kubernetes.io/ingress.class: alb
  labels:
    app: execution-service-status-server
  name: status-server-api
  namespace: execution-service-status-server
spec:
  rules:
    - host: es-status-server.alphalab.cc
      http:
        paths:
          - backend:
              service:
                name: status-server-api
                port:
                  number: 5000
            path: /
            pathType: Prefix
